--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -92,7 +92,12 @@
               <button class="text-uppercase" mat-button matStepperPrevious>
                 back
               </button>
-              <button color="primary" class="text-uppercase" mat-flat-button>
+              <button
+                color="primary"
+                class="text-uppercase"
+                mat-flat-button
+                (click)="order()"
+              >
                 place order
               </button>
             </div>
